--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,1 @@
-.u-uploader{
-	display:inline-block;
-}
-.u-uploader form,.u-uploader iframe{
-	display:none;
-}
-.u-uploader{
-	position:relative\0;
-	overflow:hidden\0;
-}
-.u-uploader form{
-	display:block\0;
-}
-.u-uploader input[type="file"]{
-	position:absolute\0;
-	top:0;
-	right:-5px;
-	font-size:100px;
-	filter:alpha(opacity = 0);
-	opacity:0;
-	cursor:pointer;
-}
+@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}@keyframes fa-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}.u-uploader{display:inline-block;position:relative\9;overflow:hidden\9}.u-uploader form,.u-uploader iframe{display:none}.u-uploader form{display:block\9}.u-uploader input[type=file]{position:absolute\9;top:0;right:-5px;font-size:100px;filter:alpha(opacity=0);opacity:0;cursor:pointer}
